--- a/master.tex
+++ b/master.tex
@@ -5,4 +5,7 @@
   \input{lectures/1.tex}
   \input{lectures/2.tex}
   \input{lectures/3.tex}
+  \input{lectures/4.tex}
+  \input{lectures/5.tex}
+  \input{lectures/6.tex}
 \end{document}
